--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 						  <tr> <th width="15%">Project Name</th>   <th>Main Category</th>   <th>Additional Categories</th>   <th width="40%">App Description</th>   <th>Live Demo Link / Release Link</th>  <th>Github Link</th>    <th>YouTube Link</th>   </tr>
 						  
 						  
-						  <tr> <td>Flask TD App</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app that was created using tutorial from TutorialsPoint website. Some enhancements have been added by me and later app has beenn deployed to Google App Engine.</td>      
+						  <tr> <td>Flask TP App (test8)</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app that was created using tutorial from TutorialsPoint website. Some enhancements have been added by me and later app has beenn deployed to Google App Engine.</td>      
 						  <td> <a href="https://flask-tp.bartlomiejduda.pl/">Flask TP Demo</a> </td>
 						  <td> <a href="https://github.com/bartlomiejduda/bartlomiejduda.pl---Flask-TP">Flask TP on Github</a> </td>
                           <td> 	<a href="https://youtube.pl">Flask TP on YouTube</a> </td>		  </tr>
