Main Site update 23.03.2021 22:55

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,10 @@
 						  <tr> <th width="15%">Project Name</th>   <th>Main Category</th>   <th>Additional Categories</th>   <th width="40%">App Description</th>   <th>Live Demo Link / Release Link</th>  <th>Github Link</th>    <th>YouTube Link</th>   </tr>
 						  
 						  
-						  <tr> <td>Flask TP App (test8)</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app that was created using tutorial from TutorialsPoint website. Some enhancements have been added by me and later app has beenn deployed to Google App Engine.</td>      
+						  <tr> <td>Flask TP App</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app that was created using tutorial from TutorialsPoint website. Some enhancements have been added by me and later app has beenn deployed to Google App Engine.</td>
 						  <td> <a href="https://flask-tp.bartlomiejduda.pl/">Flask TP Demo</a> </td>
 						  <td> <a href="https://github.com/bartlomiejduda/bartlomiejduda.pl---Flask-TP">Flask TP on Github</a> </td>
-                          <td> 	<a href="https://youtube.pl">Flask TP on YouTube</a> </td>		  </tr>
+                          <td> 	No video </td>		  </tr>
 						  
 						  
 						  <tr> <td>Minutes Counter</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app created for my fiancée to help her count time spent on task in work.</td>      
@@ -60,7 +60,7 @@
 						  rooms, playing videos, zooming pictures etc.</td>      
 						  <td> <a href="https://poland-virtual-office-tour.com/Katowice/">Virtual Tour Demo</a> </td>
 						  <td> Closed source project </td>
-                          <td> 	<a href="https://youtube.pl">Virtual Tour on YouTube</a> </td>		  </tr>
+                          <td> 	No video </td>		  </tr>
 						  
 						  
 						  <tr> <td>Unity AR App</td>   <td>C# (Unity)</td>  <td>AR, XR, Android</td>    <td>AR application made for Android.</td>      
@@ -74,35 +74,11 @@
 						  <td> <a href="https://github.com/">Unity AR Foundation on Github</a> </td>
                           <td> 	<a href="https://youtu.be/JtYgBf6qTAo">Unity AR Foundation on YouTube</a> </td>		  </tr>
 						  
-						  
-						  <tr> <td>Some Django App</td>   <td>Python (Django)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app that was created in Django.</td>      
-						  <td> <a href="https://django.bartlomiejduda.pl/">Django Demo</a> </td>
-						  <td> <a href="https://github.com/">Django App on Github</a> </td>
-                          <td> 	<a href="https://youtube.pl">Django App on YouTube</a> </td>		  </tr>
-						  
-						  
-						  <tr> <td>Asyncio App</td>   <td>Python (Asyncio)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app that was created in Asyncio.</td>      
-						  <td> <a href="https://django.bartlomiejduda.pl/">Asyncio Demo</a> </td>
-						  <td> <a href="https://github.com/">Asyncio App on Github</a> </td>
-                          <td> 	<a href="https://youtube.pl">Asyncio App on YouTube</a> </td>		  </tr>
-						  
-						  
-						  <tr> <td>DogeBook App</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>DogeBook is a dating application for dogs.</td>      
-						  <td> <a href="https://django.bartlomiejduda.pl/">DogeBook Demo</a> </td>
-						  <td> <a href="https://github.com/">DogeBook on Github</a> </td>
-                          <td> 	<a href="https://youtube.pl">DogeBook on YouTube</a> </td>		  </tr>
-						  
-						  
-						  <tr> <td>BrowserGame App</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>BrowserGame is a Python game written in Flask.</td>      
-						  <td> <a href="https://django.bartlomiejduda.pl/">BrowserGame Demo</a> </td>
-						  <td> <a href="https://github.com/">BrowserGame on Github</a> </td>
-                          <td> 	<a href="https://youtube.pl">BrowserGame on YouTube</a> </td>		  </tr>
-						 
-						  
+
 						  <tr> <td>MultiGame</td>   <td>C# (Unity)</td>  <td>Gaming, 2D assets, scripting</td>    <td>MultiGame is a game made in Unity.</td>      
-						  <td> <a href="https://django.bartlomiejduda.pl/">MultiGame Demo</a> </td>
-						  <td> <a href="https://github.com/">MultiGame on Github</a> </td>
-                          <td> 	<a href="https://youtu.be/AYjMoMU_w-U">MultiGame on YouTube</a> </td>		  </tr>
+						  <td> <a href="https://ikskoks.pl/wp-content/uploads/2016/08/Multigame_v1.3.zip">MultiGame Release</a> </td>
+						  <td> 	No link </td>
+                          <td> 	<a href="https://www.youtube.com/watch?v=AYjMoMU_w-U">MultiGame on YouTube</a></td>		  </tr>
 						  
 						  
 						  <tr> <td>Python Tools</td>   <td>Python</td>  <td>Reverse Engineering, Debugging</td>    <td>"Tools" repository is a collection of Python scripts for extracting assets from computer games.</td>      
@@ -118,7 +94,7 @@
 						  
 						  
 						  <tr> <td>Kivy Minutes Counter</td>   <td>Python</td>  <td>Kivy</td>    <td>Kivy Minutes Counter is original version of the "Minutes Counter" application.</td>      
-						  <td> <a href="https://github.com/bartlomiejduda/Kivy-Minutes-Counter/releases/tag/v0.4">Kivy Minutes Counter Demo</a> </td>
+						  <td> <a href="https://github.com/bartlomiejduda/Kivy-Minutes-Counter/releases/tag/v0.4">Kivy Minutes Counter Release</a> </td>
 						  <td> <a href="https://github.com/bartlomiejduda/Kivy-Minutes-Counter">Kivy Minutes Counter on Github</a> </td>
                           <td> 	No video </td>		  </tr>
 						  
@@ -130,9 +106,34 @@
 						  
 						  
 						  <tr> <td>Text Finder</td>   <td>Java</td>  <td>Algorithms</td>    <td>"Text Finder" is a program that was created by me to help me find text strings in binary files.</td>      
-						  <td> No demo </td>
-						  <td> <a href="https://github.com">Text Finder on Github</a> </td>
+						  <td> <a href="https://github.com/bartlomiejduda/TextFinder/releases/tag/v0.7">TextFinder Release</a> </td>
+						  <td> <a href="https://github.com/bartlomiejduda/TextFinder">Text Finder on Github</a> </td>
                           <td> 	No video </td>		  </tr>
+
+
+                          <tr> <td>Some Django App (TODO)</td>   <td>Python (Django)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app that was created in Django.</td>
+						  <td> 	No Demo</td>
+						  <td> 	No Link </td>
+                          <td> 	No Video </td>	 </tr>
+
+
+						  <tr> <td>Asyncio App (TODO)</td>   <td>Python (Asyncio)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app that was created in Asyncio.</td>
+						  <td> 	No Demo</td>
+						  <td> 	No Link </td>
+                          <td> 	No Video </td>	 </tr>
+
+
+						  <tr> <td>DogeBook App (TODO)</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>DogeBook is a dating application for dogs.</td>
+						  <td> 	No Demo</td>
+						  <td> 	No Link </td>
+                          <td> 	No Video </td>	 </tr>
+
+
+						  <tr> <td>BrowserGame App (TODO)</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>BrowserGame is a Python game written in Flask.</td>
+						  <td> 	No Demo</td>
+						  <td> 	No Link </td>
+                          <td> 	No Video </td>	 </tr>
+
 						  
 						  
 						  
