--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<title>bartlomiejduda.pl</title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="{{ url_for('static',    filename='css/main.css') }}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css', css_seed=seed ) }}">
+        <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico', icon_seed=seed )}}" type='image/x-icon' >
+
 	</head>
 	<body>
 
@@ -11,8 +13,8 @@
 		<header id="header">
 			<div class="inner">
 				<a href="#" class="image avatar"><img src="{{ url_for('static',    filename='images/avatar.jpg') }}" alt="" /></a>
-				<h1><strong>Hello</strong>, my name is<br />
-				Bartłomiej Duda and I want to<br />
+				<h1><strong>Hello</strong>, my name is
+				Bartłomiej Duda and I want to
 				show you my projects.</h1>
 			</div>
 		</header>
@@ -25,13 +27,13 @@
 				<header class="major">
 					<h2>Intro</h2>
 				</header>
-				<p>Below you can find a table with detailed information about projects that were created by me in the past. Most of them is written in Python, but you will find also
+				<p>Below you can find a table with detailed information about projects that were created by me in the past. Most of them are written in Python, but you will find also
                    some of them created in C#, C++, Java etc.</p>
 				<ul class="actions">
 					<li><a href="#Application List" class="button">Go to App List</a></li>
 				</ul>
 				
-				<p>Please note that for each app you have links for the source code, live demo and short presentation on YouTube.</p>
+				<p>Please note that for the listed apps you have links for the source code, live demo and short presentation on YouTube. <br>Use those links to check my work.</p>
 				
 			</section>
 
@@ -48,56 +50,44 @@
 						  <td> <a href="https://flask-tp.bartlomiejduda.pl/">Flask TP Demo</a> </td>
 						  <td> <a href="https://github.com/bartlomiejduda/bartlomiejduda.pl---Flask-TP">Flask TP on Github</a> </td>
                           <td> 	No video </td>		  </tr>
-						  
-						  
-						  <tr> <td>Minutes Counter</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app created for my fiancée to help her count time spent on task in work.</td>      
-						  <td> <a href="https://minutes-counter.bartlomiejduda.pl/">Minutes Counter Demo</a> </td>
-						  <td> <a href="https://github.com/">Minutes Counter on Github</a> </td>
-                          <td> 	<a href="https://youtube.pl">Minutes Counter on YouTube</a> </td>		  </tr>
-						  
+
 						  
 						  <tr> <td>Accenture Virtual Tour</td>   <td>C# (Unity)</td>  <td>WebGL, AWS</td>    <td>Virtual Tour application created completely in Unity 2021. It has many useful features like changing
 						  rooms, playing videos, zooming pictures etc.</td>      
 						  <td> <a href="https://poland-virtual-office-tour.com/Katowice/">Virtual Tour Demo</a> </td>
 						  <td> Closed source project </td>
-                          <td> 	No video </td>		  </tr>
+                          <td> 	No Video </td>		  </tr>
 						  
 						  
-						  <tr> <td>Unity AR App</td>   <td>C# (Unity)</td>  <td>AR, XR, Android</td>    <td>AR application made for Android.</td>      
-						  <td> <a href="demo_link_here">Unity AR Release</a> </td>
-						  <td> <a href="https://github.com/">Unity AR on Github</a> </td>
+						  <tr> <td>Unity AR Vuforia App</td>   <td>C# (Unity)</td>  <td>AR, XR, Android</td>    <td>AR application made in Vuforia Unity framework for Android.</td>
+						  <td> 	No Demo </td>
+						  <td> <a href="https://github.com/bartlomiejduda/Unity-AR-Demo">Unity AR on Github</a> </td>
                           <td> 	<a href="https://youtu.be/LacwdHdNkmk">Unity AR on YouTube</a> </td>		  </tr>
 						  
 						  
 						  <tr> <td>Unity AR Foundation App</td>   <td>C# (Unity)</td>  <td>AR, XR, Android</td>    <td>AR Foundation application made for Android.</td>      
-						  <td> <a href="demo_link_here">Unity AR Foundation Release</a> </td>
-						  <td> <a href="https://github.com/">Unity AR Foundation on Github</a> </td>
+						  <td> <a href="https://github.com/bartlomiejduda/Unity-AR-Foundation-Demo/releases/tag/v1.0">Unity AR Foundation Release</a> </td>
+						  <td> <a href="https://github.com/bartlomiejduda/Unity-AR-Foundation-Demo">Unity AR Foundation on Github</a> </td>
                           <td> 	<a href="https://youtu.be/JtYgBf6qTAo">Unity AR Foundation on YouTube</a> </td>		  </tr>
 						  
 
-						  <tr> <td>MultiGame</td>   <td>C# (Unity)</td>  <td>Gaming, 2D assets, scripting</td>    <td>MultiGame is a game made in Unity.</td>      
-						  <td> <a href="https://ikskoks.pl/wp-content/uploads/2016/08/Multigame_v1.3.zip">MultiGame Release</a> </td>
-						  <td> 	No link </td>
+						  <tr> <td>MultiGame</td>   <td>C# (Unity)</td>  <td>Gaming, 2D assets, scripting</td>    <td>MultiGame is a simple 2D game made in Unity engine.</td>
+						  <td> <a href="https://github.com/bartlomiejduda/MultiGame/releases/tag/v1.3">MultiGame Release</a> </td>
+						  <td> <a href="https://github.com/bartlomiejduda/MultiGame">MultiGame on Github</a> </td>
                           <td> 	<a href="https://www.youtube.com/watch?v=AYjMoMU_w-U">MultiGame on YouTube</a></td>		  </tr>
 						  
 						  
 						  <tr> <td>Python Tools</td>   <td>Python</td>  <td>Reverse Engineering, Debugging</td>    <td>"Tools" repository is a collection of Python scripts for extracting assets from computer games.</td>      
-						  <td> No demo </td>
+						  <td> No Demo </td>
 						  <td> <a href="https://github.com/bartlomiejduda/Tools">Tools on Github</a> </td>
                           <td> 	No video </td>		  </tr>
 						  
 						  
 						  <tr> <td>QuakeLOCS</td>   <td>C++</td>  <td>Gaming, Translations</td>    <td>QuakeLOCS is my modification of QuakeEngine released by ID Software.</td>      
-						  <td> No demo </td>
+						  <td> No Demo </td>
 						  <td> <a href="https://github.com/bartlomiejduda/QuakeLOCS">QuakeLOCS on Github</a> </td>
                           <td> 	No video </td>		  </tr>
-						  
-						  
-						  <tr> <td>Kivy Minutes Counter</td>   <td>Python</td>  <td>Kivy</td>    <td>Kivy Minutes Counter is original version of the "Minutes Counter" application.</td>      
-						  <td> <a href="https://github.com/bartlomiejduda/Kivy-Minutes-Counter/releases/tag/v0.4">Kivy Minutes Counter Release</a> </td>
-						  <td> <a href="https://github.com/bartlomiejduda/Kivy-Minutes-Counter">Kivy Minutes Counter on Github</a> </td>
-                          <td> 	No video </td>		  </tr>
-						  
+
 						  
 						  <tr> <td>Studia</td>   <td>C++</td>  <td>Java, Haskell</td>    <td>"Studia" repository is a collection of programs that I have created during college.</td>      
 						  <td> No demo </td>
@@ -109,6 +99,18 @@
 						  <td> <a href="https://github.com/bartlomiejduda/TextFinder/releases/tag/v0.7">TextFinder Release</a> </td>
 						  <td> <a href="https://github.com/bartlomiejduda/TextFinder">Text Finder on Github</a> </td>
                           <td> 	No video </td>		  </tr>
+
+
+                          <tr> <td>Kivy Minutes Counter</td>   <td>Python</td>  <td>Kivy</td>    <td>Kivy Minutes Counter is original version of the "Minutes Counter" application.</td>
+						  <td> <a href="https://github.com/bartlomiejduda/Kivy-Minutes-Counter/releases/tag/v0.4">Kivy Minutes Counter Release</a> </td>
+						  <td> <a href="https://github.com/bartlomiejduda/Kivy-Minutes-Counter">Kivy Minutes Counter on Github</a> </td>
+                          <td> 	No video </td>		  </tr>
+
+
+                          <tr> <td>Minutes Counter (TODO)</td>   <td>Python (Flask)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app created for my fiancée to help her count time spent on task in work.</td>
+						  <td> 	No Demo</td>
+						  <td> 	No Link </td>
+                          <td> 	No Video </td>	 </tr>
 
 
                           <tr> <td>Some Django App (TODO)</td>   <td>Python (Django)</td>  <td>CI/CD, Google Cloud</td>    <td>Simple app that was created in Django.</td>
@@ -155,8 +157,7 @@
 					<h2>Copyright</h2>
 					<div class="App List Table">
 					<p id="copyrightnotice_p1">This website and all applications listed in the table have been created by Bartłomiej Duda.<br>
-					All rights reserved.<br>
-					Website version: 0.1<br></p>
+					Website version: 1.0<br></p>
 					
 					</div>
 				</section>
